# Open-Vehicle-Server

./: README.md  pyproject.toml  v3_server_dockerfile
dev_docs/: README.md  apiv2_module.md  authdbsimple_module.md  dbdbi_module.md  roadmap.md  vece_module.md
docs/source/: README.md
docs/source/protocol_httpapi/: requests.rst
py/server/: ovms_server.py
py/server/plugins/: apiv2.py  authdbsimple.py  dbdbi.py  vece.py
v3/server/: ovms_server.pl
v3/server/conf/: ovms_server.conf.default
v3/server/plugins/obsolete/OVMS/Server/: Cluster.pm
v3/server/plugins/system/OVMS/Server/: ApiHttpCore.pm  ApiV2.pm
