[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "open-vehicle-server-py"
version = "0.1.0"
description = "Python 3 OVMS server runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ovms-server = "py.server.ovms_server:main"

[tool.hatch.build.targets.wheel]
packages = ["py"]

[tool.hatch.envs.default]
installer = "uv"
type = "virtual"

[tool.hatch.envs.default.scripts]
run = "ovms-server --config v3/server/conf/ovms_server.conf.default"
